[package]
name = "filesystem-pubsub"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Chiarlone" ]
description = "A filesystem-based pubsub implementation"
readme = "README.md"
repository = "https://github.com/danbugs/filesystem-pubsub"
LICENSE = "AGPL-3.0"

[lib]
doctest = false
test = false

[[bin]]
name = "filesystem-pubsub-broker"
path = "src/bin/broker.rs"
test = false

[dependencies]
anyhow = "1"
uuid = { version = "1.1", features = ["v4"] }
